src/types/tests/snapshots/tgbot__types__tests__file__send_video-2.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "allow_paid_broadcast": true,
  "business_connection_id": "id",
  "callback_query_id": "cqid",
  "caption": "Caption",
  "chat_id": 1,
  "cover": "cover-id",
  "direct_messages_topic_id": 1,
  "disable_notification": true,
  "duration": 100,
  "has_spoiler": true,
  "height": 300,
  "message_effect_id": "effect-id",
  "message_thread_id": 1,
  "parse_mode": "Markdown",
  "protect_content": true,
  "receiver_user_id": 999,
  "reply_markup": {
    "force_reply": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "show_caption_above_media": true,
  "start_timestamp": 20,
  "suggested_post_parameters": {},
  "supports_streaming": true,
  "thumbnail": "https://example.com/image.jpg",
  "video": "file-id",
  "width": 200
}
