src/types/tests/snapshots/tgbot__types__tests__file__send_video-4.snap
---
source: src/types/tests/file.rs
expression: actual_data
---
{
  "chat_id": "1",
  "parse_mode": "Markdown",
  "video": "file-id"
}
