src/types/tests/snapshots/tgbot__types__tests__file__send_video_entities_vs_parse_mode-2.snap
---
source: src/types/tests/file.rs
expression: actual_form.into_fields()
---
[
    (
        "caption_entities",
        FormValue::Text(
            "[{\"offset\":0,\"length\":10,\"type\":\"bold\"}]",
        ),
    ),
    (
        "chat_id",
        FormValue::Text(
            "1",
        ),
    ),
    (
        "video",
        FormValue::Text(
            "file-id",
        ),
    ),
]
