src/types/tests/snapshots/tgbot__types__tests__file__send_video_entities_vs_parse_mode.snap
---
source: src/types/tests/file.rs
expression: actual_form
---
Form {
    fields: {
        "parse_mode": FormValue::Text(
            "Markdown",
        ),
        "chat_id": FormValue::Text(
            "1",
        ),
        "video": FormValue::Text(
            "file-id",
        ),
    },
}
